# soushi-cashflow-prediction

./: .env.example  .gitignore  README.md  baseline.py  main copy.py  main.py  pyproject.toml  test_feature_importance.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/cv/: config.yml
config/dataset/: config.yml
config/metrics/: config.yml
config/model/: catboost.yml
config/preprocessing/: config.yml  config_after_data_split.yml
src/: typing.py
src/config/: __init__.py  _utils.py  base.py  cv.py  dataset.py  metrics.py  model.py  preprocessing.py
src/cv/: __init__.py  _splitter.py
src/experiment/: __init__.py  base.py
src/ingestion/: __init__.py  _ingest.py
src/model/: __init__.py  _output.py  base.py  catboost.py
src/model/metrics/: __init__.py  _regression.py
src/preprocessing/: __init__.py  base.py  pipeline.py  step.py
