[project]
name = "soushi-cashflow-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "mlflow==3.3.1",
    "polars>=1.33.1",
    "prefect>=3.4.18",
    "pydantic>=2.11.9",
    "scikit-learn>=1.7.2",
    "xgboost>=3.0.5",
]

[dependency-groups]
lint = [
    "isort>=6.0.1",
    "ruff>=0.13.0",
]
